Finised Cutomer API and validation
