# swagger_output.json
@@ -13,7 +13,7 @@
   "paths": {
     "/": {
       "get": {
-        "description": "The root of the project",
+        "description": "",
         "responses": {
           "200": {
             "description": "OK"
@@ -23,7 +23,7 @@
     },
     "/api-docs": {
       "get": {
-        "description": "The Swagger API test",
+        "description": "",
         "responses": {
           "default": {
             "description": ""
@@ -33,7 +33,7 @@
     },
     "/accounts/": {
       "get": {
-        "description": "List all accounts API",
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -47,10 +47,7 @@
         }
       },
       "post": {
-        "description": "Post a new account API",
-        "consumes": [
-          "application/json"
-        ],
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -58,44 +55,17 @@
           {
             "name": "body",
             "in": "body",
-            "description": "Account to be created",
-            "required": true,
             "schema": {
               "type": "object",
-              "required": [
-                "account_id",
-                "limit",
-                "products"
-              ],
               "properties": {
                 "account_id": {
-                  "type": "integer",
-                  "description": "Unique account ID.",
-                  "example": 898989
+                  "example": "any"
                 },
                 "limit": {
-                  "type": "integer",
-                  "minimum": 9000,
-                  "description": "Credit limit for the account.",
-                  "example": 9000
+                  "example": "any"
                 },
                 "products": {
-                  "type": "array",
-                  "minItems": 1,
-                  "description": "List of products associated with account.",
-                  "items": {
-                    "type": "string",
-                    "description": "Product name",
-                    "example": "CurrencyService"
-                  },
-                  "example": [
-                    "Brokerage",
-                    "CurrencyService",
-                    "Derivatives",
-                    "InvestmentFund",
-                    "Commodity",
-                    "InvestmentStock"
-                  ]
+                  "example": "any"
                 }
               }
             }
@@ -104,6 +74,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -135,10 +108,7 @@
         }
       },
       "put": {
-        "description": "The API to update an account",
-        "consumes": [
-          "application/json"
-        ],
+        "description": "",
         "produces": [
           "application/json"
         ],
@@ -147,48 +117,7 @@
             "name": "id",
             "in": "path",
             "required": true,
-            "type": "string",
-            "description": "The id of account to update"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "description": "The files to update (only edit what needs to be changed)",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "account_id": {
-                  "type": "integer",
-                  "description": "Unique account ID.",
-                  "example": 898989
-                },
-                "limit": {
-                  "type": "integer",
-                  "minimum": 9000,
-                  "description": "Credit limit for the account.",
-                  "example": 9000
-                },
-                "products": {
-                  "type": "array",
-                  "minItems": 1,
-                  "description": "List of products associated with account.",
-                  "items": {
-                    "type": "string",
-                    "description": "Product name",
-                    "example": "CurrencyService"
-                  },
-                  "example": [
-                    "Brokerage",
-                    "CurrencyService",
-                    "Derivatives",
-                    "InvestmentFund",
-                    "Commodity",
-                    "InvestmentStock"
-                  ]
-                }
-              }
-            }
+            "type": "string"
           }
         ],
         "responses": {
@@ -201,7 +130,140 @@
         }
       },
       "delete": {
-        "description": "The API to delete an account with id",
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/customers/": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "post": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "username": {
+                  "example": "any"
+                },
+                "name": {
+                  "example": "any"
+                },
+                "address": {
+                  "example": "any"
+                },
+                "birthdate": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
+                "accounts": {
+                  "example": "any"
+                },
+                "tier_and_details": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/customers/{id}": {
+      "get": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "produces": [
+          "application/json"
+        ],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      },
+      "delete": {
+        "description": "",
         "produces": [
           "application/json"
         ],
